# reframework-updater

./: .gitignore  .releaserc  Cargo.toml  LICENSE  README.md  build.rs  manifest.xml:Zone.Identifier
.github/workflows/: rust.yml
src/: ScrapperError.rs  args.rs  config.rs  main.rs  rManager.rs  rManager_header.rs  refr_github.rs  releases_nightly.htm  scrapper copy.rs  scrapper.rs  steam.rs  utils.rs  version_parser.rs
src/dialogs/: dialogs.rs  dialogs_label.rs
src/dialogs/dialogs/: dialog_tests.rs  download_decision_tests.rs
src/dialogs/dialogs/download_decision_tests/: init_dialogs_mock.rs
src/rManager/: cleanup_cache.rs  rManager.rs  rManager_header.rs
src/reframework_github/: refr_github.rs  release.rs
src/scrapper/: ScrapperError.rs  scrapper.rs  scrapperTest.rs
src/strategy/: StrategyFactory.rs
src/tests/: config_provider_mock.rs  data.rs  dialog_provider_mock.rs  init_dialogs_mock.rs  integration.rs  local_provider_mock.rs  manager_mocks.rs  refr_github_mock.rs  releases_nightly.htm  steam_mock.rs
src/toml/: config.rs
src/tomlConf/: FromValue.rs  config.rs  configStruct.rs  configTest.rs  file.toml  utils.rs
src/unzip/: UnzipError.rs  mod.rs  unzip.rs
src/utils/: binSearch.rs  fetch.rs  find_game_conf_by_steam_id.rs  get_local_path_to_cache.rs  init_logger.rs  is_asset_tdb.rs  local_version.rs  mslink.rs  open_dialog.rs  progress_style.rs  restart_program.rs  version_parser.rs
