[package]
name = "reframework-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
futures = "0.3.21"
reqwest = "0.11.11"
select = "0.5.0"
tokio = { version = "1.19.2", features = ["full"] }
