[package]
name = "REFresher"
version = "1.1.2"
edition = "2021"
authors = ["Łukasz Kwiecień"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
dialoguer = "0.10.1"
error-stack = "0.1.1"
game-scanner = "1.1.4"
indicatif = "0.16.2"
log = "0.4.17"
rand = "0.8.5"
reqwest = "0.11.11"
self_update = "0.30.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
simplelog = "0.12.0"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
zip = "0.6.2"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
mockall = "0.11.1"
lazy_static = "1.4.0"
